tests/required_labels/manifests/daemonset-with-required-label.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset-with-required-label
  namespace: check-kyverno
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        team: test
    spec:
      containers:
      - name: nginx
        image: nginx:latest
