tests/required_labels/manifests/deployment-without-required-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-without-required-label
  namespace: check-kyverno
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
      - name: nginx
        image: nginx:latest
