tests/required_labels/manifests/statefulset-without-required-label.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-without-required-label
  namespace: check-kyverno
spec:
  replicas: 1
  serviceName: nginx
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
